@@ -7,8 +7,8 @@ like to be included in this list, please let me know.<br><br>
 
 <ul>
 
-<li><a href="http://www.nightskyent.com/Hosting/features.php" TARGET="Resource Window">
-NightSky Entertainment</a><br><br>
+<li><a href="http://www.nightskyhosting.com/features.php" TARGET="Resource Window">
+NightSky Hosting</a><br><br>
 
 <li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br><br>
 
