@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Apr  9 11:14:04 2002 -->
+<!-- Thu Jun  6 16:07:35 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -138,8 +138,8 @@ like to be included in this list, please let me know.<br><br>
 
 <ul>
 
-<li><a href="http://www.nightskyent.com/Hosting/features.php" TARGET="Resource Window">
-NightSky Entertainment</a><br><br>
+<li><a href="http://www.nightskyhosting.com/features.php" TARGET="Resource Window">
+NightSky Hosting</a><br><br>
 
 <li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br><br>
 
