@@ -1,3 +1,7 @@
+2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* inuse.ht (Links): Update Nightsky link.
+
 2002-05-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* results.ht (Links): Add testimonial from Stacey A. Ross.
